# ENSC351_Project

./: README.md
Motor_Controller/: CMakeLists.txt  aarch64-toolchain.cmake  extlinux.conf
Motor_Controller/algorithms/: CMakeLists.txt
Motor_Controller/algorithms/include/: bemf_sector.h  filters.h  pi_controller.h
Motor_Controller/algorithms/src/: bemf_sector.c  filters.c  pi_controller.c
Motor_Controller/app/: CMakeLists.txt
Motor_Controller/app/include/: status_display.h  udp_server.h
Motor_Controller/app/src/: main.c  motor_gpio_test.c  status_display.c  udp_server.c
Motor_Controller/build1/: CMakeCache.txt  Makefile  cmake_install.cmake
Motor_Controller/build1/algorithms/: Makefile  cmake_install.cmake
Motor_Controller/build1/app/: Makefile  Motor_Controller  Motor_GPIO_Test  cmake_install.cmake
Motor_Controller/build1/config/: Makefile  cmake_install.cmake
Motor_Controller/build1/hal/: Makefile  cmake_install.cmake
Motor_Controller/build1/motor/: Makefile  cmake_install.cmake
Motor_Controller/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
Motor_Controller/build_test/algorithms/: Makefile  cmake_install.cmake
Motor_Controller/build_test/app/: Makefile  Motor_Controller  Motor_GPIO_Test  cmake_install.cmake
Motor_Controller/build_test/config/: Makefile  cmake_install.cmake
Motor_Controller/build_test/hal/: Makefile  cmake_install.cmake
Motor_Controller/build_test/motor/: Makefile  cmake_install.cmake
Motor_Controller/config/: CMakeLists.txt  motor_config.h
Motor_Controller/config/include/: motor_config.h  motor_config_runtime.h
Motor_Controller/config/src/: motor_config_runtime.c
Motor_Controller/hal/: CMakeLists.txt
Motor_Controller/hal/include/: bemf.h  drv8302.h  pwm _motor.h  pwm_motor.h  timer.h
Motor_Controller/hal/include/hal/: adc.h  drv8302.h  gpio.h  hall.h  pwm.h
Motor_Controller/hal/src/: adc.c  bemf.c  drv8302.c  gpio.c  hall.c  pwm.c  pwm_motor.c  timer.c
Motor_Controller/motor/: CMakeLists.txt
Motor_Controller/motor/include/: bemf_sector.h  fast_loop.h  hall_commutator.h  motor_control.h  motor_states.h  position_estimator.h  sensorless_handover.h  slow_loop.h  speed_measurement.h
Motor_Controller/motor/src/: bemf_sector.c  fast_loop.c  hall_commutator.c  motor_control.c  motor_states.c  position_estimator.c  sensorless_handover.c  slow_loop.c  speed_measurement.c
